# forTesting

./: CMakeLists.txt  NetConfig.h.in  README.md  deep_drive_model.prototxt
CMakeModules/: CMake_lib_macros.cmake
samples/Test/: main.cpp
